--- a/styles/style.css
+++ b/styles/style.css
@@ -9,3 +9,126 @@
   font-weight: 400;
   font-style: normal;
 }
+/* shared style */
+.display-flax{
+    display: flex;
+}
+.text-primary{
+  color: #FF900E;
+}
+/* dark02 */
+.tax-gray{
+  color: #424242;
+}
+/* dark03 */
+.taxt-light-gray{
+  color: #727272;
+}
+.bg-light{
+  background-color: #rgba(255, 144, 14, 0.1);
+}
+.btn-primary{
+  background-color: #FF900E;
+  color: #FFFFFF;
+  padding: 20px 25px;
+  font-size: 1.25rem;
+  font-weight: 600;
+  border-radius: 8px; border: none;
+}
+main{
+  max-width: 1440px;
+  margin: 0 auto;
+}
+main > section{
+  margin-top: 130px;
+}
+.section-title{
+  font-size: 2.8rem;
+  max-width: 530px;
+
+/*     header style    */
+
+
+/*        navber related styles  */
+.navber{
+  justify-content: space-between;
+  align-items: center;
+}
+.brand{
+  font-weight: 700;
+  font-size: 3rem;
+}
+.nav-item{
+  list-style: none;
+  margin-right: 30px;
+}
+.nav-link{
+  text-decoration: none;
+  font-size: 18px;
+  opacity: 100%;
+  font-weight: 500;
+  line-height: 26px;
+  letter-spacing: 0%;
+}
+.navber, .banner{
+  max-width: 1440px;
+  margin: 0 auto;
+}
+/*     banner related styles   */
+.banner-content{
+  max-width: 850px;
+  margin:0 auto ;
+  text-align: center;
+  margin-bottom: 50px;
+}
+.banner-title{
+  font-size: 700;
+  font-size: 4rem;
+}
+.banner-img{
+  width: 100%;
+}
+/* team and feature reladed styles*/
+
+.teams{
+  align-items: center;
+}
+.team-img-container{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 24px;
+}
+.our-features{
+  margin-left: 130px;
+  max-width: 530px;
+}
+
+}
+#quick-list{
+  font-weight: 500;
+  font-weight: 700;
+}
+
+/* responsive media quary */
+ @media  screen and (max-width: 576px) {
+  .navber,
+   .nav-link,
+   .teams {
+    flex-direction: column;
+  } 
+  .team-img-container{
+  grid-template-columns: repeat( 1, 1fr);}
+  .our-features{
+    margin-left: 20px;
+  }
+ }
+
+ /* medium size device */
+ @media screen and (min-width:576px) and (max-width: 992px) {
+  .teams{
+    flex-direction: column;
+  }
+  .our-features{
+    margin: 50px auto ;
+  }
+ }
