--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,10 @@
   font-weight: 400;
   font-style: normal;
 }
+.container{
+  width: 1440px;
+  margin: auto;
+}
 /* shared style */
 .display-flax{
     display: flex;
@@ -25,7 +29,8 @@
   color: #727272;
 }
 .bg-light{
-  background-color: #rgba(255, 144, 14, 0.1);
+  background-color: rgba(255, 144, 14, 0.1);
+  padding-bottom: 16px;
 }
 .btn-primary{
   background-color: #FF900E;
@@ -45,6 +50,7 @@ main > section{
 .section-title{
   font-size: 2.8rem;
   max-width: 530px;
+}
 
 /*     header style    */
 
@@ -103,10 +109,36 @@ main > section{
   max-width: 530px;
 }
 
-}
 #quick-list{
   font-weight: 500;
   font-weight: 700;
+}
+/* some facts related styles */
+.facts-container{
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+}
+.fact-card{
+  border: 1px solid #FF900E;
+  width: 240px;
+  height: 240px;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  gap: 3px;
+  justify-content: center;
+  align-items: center;
+}
+/*    sponsors related styles   */
+.sponsor-info{
+  max-width: 500px;
+  margin: 50px auto;
+  text-align: center;
+}
+
+.sponsor-companies{
+  display: grid;
+  grid-template-columns: repeat(5,1fr);
 }
 
 /* responsive media quary */
@@ -121,6 +153,15 @@ main > section{
   .our-features{
     margin-left: 20px;
   }
+  .facts-container, 
+  .sponsor-companies
+  {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .sponsor-companies{
+    justify-items: center;
+    gap: 50px;
+  }
  }
 
  /* medium size device */
@@ -130,5 +171,14 @@ main > section{
   }
   .our-features{
     margin: 50px auto ;
+  }
+  .facts-container{
+    grid-template-columns: repeat(3, 1fr);
+
+  }
+  .sponsor-companies{
+    grid-template-columns: repeat(2, 1fr);
+    gap: 50px;
+    justify-items: center;
   }
  }
